EKS/NginxController/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <ingress 이름>
  namespace: <네임스페이스 이름>

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <서비스 이름>
            port:
              number: 80
